--- a/frontend/src/components/filter/Filter.scss
+++ b/frontend/src/components/filter/Filter.scss
@@ -60,6 +60,10 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
+            .loading{
+                justify-self: center;
+                align-self: center;
+            }
             .default{
                 display: flex;
                 flex-direction: row;
