--- a/frontend/src/components/adminPanel/AdminPages.scss
+++ b/frontend/src/components/adminPanel/AdminPages.scss
@@ -30,6 +30,24 @@
             justify-content: flex-start;
             align-items: flex-start;
             flex-wrap: wrap; 
+            .image{
+                margin: 10px;
+                background-color:#0049b7;
+                height:50px;
+                width:250px;
+                padding: 20px;
+                border-radius: 5px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                p{
+                    
+                    font-family: 'Roboto-Bold', sans-serif;
+                    font-size: 14px;
+                    color:white;
+                }
+            }
         }
         .footer{
             margin: 15px;
